// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyStatusBar component renders a default message when no message provided 1`] = `
<EuiPanel>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem
      grow={false}
    >
      No data found for monitor id mon_id
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`EmptyStatusBar component renders a message when provided 1`] = `
<EuiPanel>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem
      grow={false}
    >
      foobarbaz
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;
